--- a/04_Fake-maker_detected.html
+++ b/04_Fake-maker_detected.html
@@ -72,17 +72,17 @@
 
 <div class="panel panel-default red_back">
   <div class="panel-body">
-    
+
     <div class="col-lg-1 col-sm-2 col-xs-4"><img src="images/life.JPG" class="img-responsive" alt=""></div>
     <div class="col-xs-8 col-sm-11 text-right"><a href="#" class="details_link">DETAILS ></a></div>
   </div>
 </div>
         </div>
       </div>
-   
+
     </div>
     <div class="col-sm-4 col-sm-offset-4 col-xs-12">
-<button class="btn btn-success btn-md col-xs-12">Factcheck Link</button></div>
+<a href="05_Fake_Detected.html" class="btn btn-success btn-md col-xs-12">Factcheck Link</a></div>
     <footer class="footer">
       <div class="container text-center">
      <a href="#">Factcheck Newsfeed</a> | <a href="#">Order Factcheck</a> | <a href="#">Report Fake</a> | <a href="#">Subscription</a> | <a href="#">Mailing List</a> | <a href="#">More Actions</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a>
@@ -96,7 +96,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
-    
+
 
   </body>
 </html>
