--- a/08_Order_Factcheck.html
+++ b/08_Order_Factcheck.html
@@ -85,7 +85,7 @@
 <button class="btn btn-success btn-md col-xs-12">Order</button></div>
     <footer class="footer">
       <div class="container text-center">
-     <a href="#">Factcheck Newsfeed</a> | <a href="#">Order Factcheck</a> | <a href="#">Report Fake</a> | <a href="#">Subscription</a> | <a href="#">Mailing List</a> | <a href="#">More Actions</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a>
+     <a href="#">Factcheck Newsfeed</a> | <a href="#">Order Factcheck</a> | <a href="#">Report Fake</a> | <a href="#">Subscription</a> | <a href="#">News</a> | <a href="#">More Actions</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a>
       </div>
     </footer>
 
