--- a/01_check_newsfeed.html
+++ b/01_check_newsfeed.html
@@ -73,7 +73,7 @@
 
     <footer class="footer">
       <div class="container text-center">
-     <a href="#">Factcheck</a> | <a href="#">Subscription</a> | <a href="#">Blog</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a> | <a href="#">More</a> 
+     <a href="#">Factcheck</a> | <a href="#">Subscription</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Blog</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a> | <a href="#">More</a> 
       </div>
     </footer>
 
