--- a/no_fakes_found.html
+++ b/no_fakes_found.html
@@ -75,12 +75,12 @@ Consider subscribing to stay aware of new fakes and fakemakers.</p>
 
     <div class="col-sm-4 col-sm-offset-4 col-xs-12">
 <button class="btn btn-success btn-md col-xs-12">Subscribe</button></div>
+    
     <footer class="footer">
       <div class="container text-center">
-     <a href="#">Factcheck Newsfeed</a> | <a href="#">Order Factcheck</a> | <a href="#">Report Fake</a> | <a href="#">Subscription</a> | <a href="#">News</a> | <a href="#">More Actions</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a>
+     <a href="#">Factcheck</a> | <a href="#">Subscription</a> | <a href="#">About</a> | <a href="#">FAQ</a> | <a href="#">Blog</a> | <a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Contact</a> | <a href="#">More</a> 
       </div>
     </footer>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
